# semmy

./: .gitignore  .release-please-config.json  CHANGELOG.md  CLAUDE.md  CONTRIBUTING.md  README.md  Taskfile.yaml  lefthook.yml  pyproject.toml  renovate.json
.claude/: settings.local.json
.github/workflows/: build.yml  ci.yml  codeql-analysis.yml  pr.yml  release.yml
semmy/: __init__.py
tests/: conftest.py  test_order.py  test_semmy.py
