[project]
name = "semmy"
description = "Semantic versioning made easy for Python"
version = "2.0.1"
authors = [
    { name = "Niko Heikkilä", email = "yo@nikoheikkila.fi" }
]
license = { text = "MIT" }
readme = "README.md"
requires-python = ">=3.12"
classifiers = [
    "Development Status :: 5 - Production/Stable",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "Topic :: System :: Software Distribution",
]

[project.urls]
Homepage = "https://pypi.org/project/semmy/"
Repository = "https://github.com/nikoheikkila/semmy"
Documentation = "https://github.com/nikoheikkila/semmy/blob/main/README.md"
"Bug Tracker" = "https://github.com/nikoheikkila/semmy/issues"
"Discussions" = "https://github.com/nikoheikkila/semmy/discussions"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.uv]
dev-dependencies = [
    "pytest>=8.0.0",
    "pytest-mock>=3.6.1",
    "mypy>=1.0",
    "black>=24.0.0",
    "ruff>=0.1.0",
    "mutmut>=2.2.0",
    "hypothesis>=6.36.1",
    "assertpy>=1.1",
]


[tool.black]
line-length = 120
target-version = ["py312"]
include = "\\.pyi?$"

[tool.ruff]
target-version = "py312"
line-length = 120

[tool.ruff.lint]
select = [
    "E",  # pycodestyle errors
    "W",  # pycodestyle warnings
    "F",  # pyflakes
    "I",  # isort
    "B",  # flake8-bugbear
    "C4", # flake8-comprehensions
    "UP", # pyupgrade
    "RUF", # Ruff-specific rules
]
ignore = [
    "E501",  # line too long, handled by black
]

[tool.ruff.lint.per-file-ignores]
"tests/*" = ["B018"]  # Allow "useless" expressions in tests

[tool.mypy]
python_version = "3.12"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true
disallow_incomplete_defs = true
check_untyped_defs = true
no_implicit_optional = true
strict_optional = true

[[tool.mypy.overrides]]
module = "assertpy"
ignore_missing_imports = true

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py", "*_test.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
addopts = "-v --tb=short"

[tool.mutmut]
paths_to_mutate = "semmy/"
tests_dir = "tests/"
disable_mutation_types = "string"
